# wayvoxtral

./: LICENSE  README.md  pyproject.toml
config/: config.json.example  wayvoxtral.conf.example
scripts/: install.sh
src/wayvoxtral/: __init__.py  __main__.py  api.py  audio.py  config.py  daemon.py  hotkey.py  insertion.py  ui.py
systemd/: wayvoxtral.service
