[project]
name = "wayvoxtral"
version = "0.1.0"
description = "Push-to-Speech tool for Wayland with global hotkey support"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "WayVoxtral Contributors"}
]
keywords = ["speech-to-text", "wayland", "voxtral", "mistral", "transcription"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyaudio>=0.2.14",
    "evdev>=1.6.0",
    "PyGObject>=3.46.0",
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]

[project.scripts]
wayvoxtral = "wayvoxtral.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wayvoxtral"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
